Changes for 3.4.4rc1

New features:

Bug fixes:

--------------------------------------------------------------------------------
Changes for 3.4.3

3.4.3rc1 was released as 3.4.3 without any changes

--------------------------------------------------------------------------------
Changes for 3.4.3rc1

New features:
...G...PS. [ZBXNEXT-1862] modified server, proxy and agent to follow changes in /etc/resolv.conf (Andris)

Bug fixes:
..F.I..... [ZBX-12659] fixed missing information in "Status of Zabbix" widget with huge sessions table (Sasha)
..F....... [ZBX-12788] fixed error when template is added to hosts via mass update form (gcalenko, vmurzins)
.......P.. [ZBX-12838] fixed trap, snmptrap items of log type not being processed by proxy (wiper)
..F....... [ZBX-12777] fixed default value for JMX endpoint on item type change in edit form and mass update form (gcalenko)
...G...PS. [ZBX-12594] fixed system.run, user parameter and external check not to become unsupported when exit code is different than zero (vso)
........S. [ZBX-10547] fixed IT services calculation in parallel transactions not seeing each other changes when calculating common parent service (vso)
........S. [ZBX-12791] fixed hanging of preprocessing manager process due to file descriptor limit exhaustion when too many data gathering processes are configured to start (gleb)
..F....... [ZBXNEXT-3732] fixed IE and Opera specific javascript bug; improved the depth control of navigation tree items; improved coding style and performance (miks)
..F....... [ZBX-12577] fixed simple graph widget item support: only supported dynamic items, only real hosts, show only hosts with items (gcalenko)
..F....... [ZBX-12689] added 'filter field should not be empty' validation for sysmap widget form (gcalenko)
........S. [ZBX-12441] fixed user permission check for macros containing user personal information in notification messages (viktors)